--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -1,6 +1,10 @@
 # /etc/nginx/nginx.conf
 
-events {}
+events {
+
+}
+
+
 
 http {
   # --- базове
@@ -18,6 +22,9 @@ http {
   upstream fastapi_upstream {
     server api:8000;   # внутрішній порт сервісу fastapi
     keepalive 64;
+  }
+  upstream dash_upstream {
+  server dash:8050;
   }
 
   # --- HTTP→HTTPS + ACME
@@ -57,34 +64,36 @@ http {
     merge_slashes on;
     # --- health
 
-    # --- головна (Dash)
-    location ^~ /dem/ {
-      # Важливо: використовуємо сліш у кінці, щоб вирізати /dashboard
-      proxy_pass http://dash:8050/;
 
+    # ...
+    location ^~ /dem/ {
+  # знімаємо префікс /dem для додатку
+      rewrite ^/dem(/.*)$ $1 break;
+
+      proxy_pass         http://dash_upstream;
+      proxy_http_version 1.1;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_set_header   Upgrade $http_upgrade;
+      proxy_set_header   Connection "";
+      proxy_read_timeout 3600s;
+      proxy_send_timeout 3600s;
+      proxy_buffering off;
+      proxy_request_buffering off;
+      add_header X-Accel-Buffering no always;
     }
-     location = /dashboard { return 302 /dem/dashboard; }
-     location = /dem-diff { return 302 /dem/dem-diff; }
-#     location / {
-#         # Залиште цю логіку, якщо вам потрібен Dash як головна сторінка
-#         # або якщо у вас є фронтенд на цьому шляху.
-#         # АБО... направте його на ваш фронтенд:
-#         # root /var/www/geoai-front/current;
-#         # try_files $uri $uri/ =404;
-#
-#         # Якщо ви хочете, щоб Dash був корнем, використовуйте перенаправлення:
-#         return 302 /dashboard;
-#     }
+
+    # Зручні редіректи (за бажанням)
+    location = /dashboard { return 302 /dem/dashboard; }
+    location = /dem-diff  { return 302 /dem/dem-diff; }
+
     # --- FastAPI
-   # ------------------------------------------------------------------
-    # --- FastAPI (ОДИН, ПОВНИЙ БЛОК)
-     # --- FastAPI (ОДИН блок для всього API-трафіку)
+
     location ^~ /api/ {
 #         rewrite /api/(.*) /$1 break;
-        # Важливо: використовуємо повне ім'я сервісу:порт і БЕЗ кінцевого `/`
-      proxy_pass http://fastapi_upstream;   # без кінцевого /
-
-        # Заголовки, буферизація та тайм-аути
+        proxy_pass http://fastapi_upstream;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
