--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -4,8 +4,6 @@ events {
 
 }
 
-
-
 http {
   # --- базове
   include       /etc/nginx/mime.types;
@@ -20,9 +18,9 @@ http {
 
   resolver 127.0.0.11 valid=30s ipv6=off;
   upstream fastapi_upstream {
-    server api:8000;   # внутрішній порт сервісу fastapi
+    server api:8000;
     keepalive 64;
-  }
+      }
   upstream dash_upstream {
   server dash:8050;
   }
@@ -67,9 +65,6 @@ http {
 
     # ...
     location ^~ /dem/ {
-  # знімаємо префікс /dem для додатку
-      rewrite ^/dem(/.*)$ $1 break;
-
       proxy_pass         http://dash_upstream;
       proxy_http_version 1.1;
       proxy_set_header   Host $host;
