--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -87,7 +87,7 @@ http {
     # --- FastAPI
 
     location ^~ /api/ {
-#         rewrite /api/(.*) /$1 break;
+        rewrite /api/(.*) /$1 break;
         proxy_pass http://fastapi_upstream;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
