--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -84,6 +84,10 @@ http {
     location = /dashboard { return 302 /dem/dashboard; }
     location = /dem-diff  { return 302 /dem/dem-diff; }
 
+    location ~* \.map$ {
+    return 204;
+}
+
     # --- FastAPI
 
     location ^~ /api/ {
