dash track floods

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -87,6 +87,31 @@ http {
     location ~* \.map$ {
     return 204;
 }
+    # головні ендпоїнти Dash
+    location /_dash-layout { proxy_pass http://dash_upstream; }
+    location /_dash-dependencies { proxy_pass http://dash_upstream; }
+    location /_dash-update-component {
+        proxy_pass http://dash_upstream;
+        proxy_read_timeout 300s;           # довгі колбеки
+    }
+    # СТАТИКА компонентних бібліотек (ВАЖЛИВО!)
+    location /_dash-component-suites/ {
+        proxy_pass http://dash_upstream;
+        proxy_set_header Host $host;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_buffering on;
+        expires 30d;
+            }
+
+     # ваші /assets (якщо потрібне пряме віддавання)
+    location /assets/ {
+        alias /app/assets/;                # шлях всередині контейнера/сервера
+        try_files $uri @dash;
+    }
+    location @dash {
+        proxy_pass http://dash_upstream;
+    }
 
     # --- FastAPI
 
