--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -26,6 +26,9 @@ http {
   }
 
   # --- HTTP→HTTPS + ACME
+  map $http_origin $cors_allow_origin {
+  default ""; "https://geohydroai.org" $http_origin; "https://www.geohydroai.org" $http_origin;
+}
   server {
     listen 80;
     server_name geohydroai.org www.geohydroai.org;
@@ -64,7 +67,7 @@ http {
 
 
     # ...
-    location ^~ /dem/ {
+    location ^~ /dem/{
       proxy_pass         http://dash_upstream;
       proxy_http_version 1.1;
       proxy_set_header   Host $host;
@@ -79,10 +82,7 @@ http {
       proxy_request_buffering off;
       add_header X-Accel-Buffering no always;
     }
-
-    # Зручні редіректи (за бажанням)
-    location = /dashboard { return 302 /dem/dashboard; }
-    location = /dem-diff  { return 302 /dem/dem-diff; }
+    location = /dem { return 302 /dem/; }
 
     location ~* \.map$ {
     return 204;
