dash  dem diff visual

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -187,5 +187,13 @@ http {
       add_header Access-Control-Allow-Headers "Origin,Content-Type,Accept,Range" always;
       add_header Vary "Origin" always;
     }
+    location ^~ /tc/static/ {
+      proxy_pass http://terracotta:5000/static/;
+      proxy_set_header Host $host;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+      expires 30d;
+    }
+
   }
 }
