dash  dem diff visual

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -25,10 +25,7 @@ http {
   server dash:8050;
   }
 
-  # --- HTTP→HTTPS + ACME
-  map $http_origin $cors_allow_origin {
-  default ""; "https://geohydroai.org" $http_origin; "https://www.geohydroai.org" $http_origin;
-}
+
   server {
     listen 80;
     server_name geohydroai.org www.geohydroai.org;
@@ -64,6 +61,21 @@ http {
     add_header X-Accel-Buffering no always;
     merge_slashes on;
     # --- health
+
+    server_tokens off;
+
+# 444 для явного сміття/невідомих php-скриптів
+    location ~* \.(php|asp|aspx|jsp)$ {
+        return 444;
+    }
+
+    # Блок популярних сміттєвих шляхів
+    location ~* ^/(admin|wp-admin|wp-login|xmlrpc\.php|vendor|env|console) {
+        return 444;
+    }
+
+    # Ліміт частоти запитів (rate limit)
+    limit_req_zone $binary_remote_addr zone=rl:10m rate=10r/s;
 
 
     # ...
@@ -112,6 +124,12 @@ http {
     location @dash {
         proxy_pass http://dash_upstream;
     }
+    location = /favicon.ico {
+    root /var/www/geoai-front/current;
+    try_files /favicon.ico /public/favicon.ico =404;
+    access_log off;
+    expires 30d;
+}
 
     # --- FastAPI
 
