dash  dem diff visual

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -134,7 +134,6 @@ http {
     # --- FastAPI
 
     location ^~ /api/ {
-        rewrite /api/(.*) /$1 break;
         proxy_pass http://fastapi_upstream;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -152,8 +151,8 @@ http {
     }
 #     location = /healthz      { proxy_pass http://fastapi_upstream/healthz; }
 
-    location = /docs         { return 302 /api/docs; }
-    location = /openapi.json { return 302 /api/openapi.json; }
+#     location = /docs         { return 302 /api/docs; }
+#     location = /openapi.json { return 302 /api/openapi.json; }
 
 
     location /flood_scenarios/ {
@@ -205,13 +204,13 @@ http {
       add_header Access-Control-Allow-Headers "Origin,Content-Type,Accept,Range" always;
       add_header Vary "Origin" always;
     }
-    location ^~ /tc/static/ {
-      proxy_pass http://terracotta:5000/static/;
-      proxy_set_header Host $host;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      expires 30d;
-    }
+#     location ^~ /tc/static/ {
+#       proxy_pass http://terracotta:5000/static/;
+#       proxy_set_header Host $host;
+#       proxy_http_version 1.1;
+#       proxy_set_header Connection "";
+#       expires 30d;
+#     }
 
   }
 }
