dash  dem diff visual

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -62,21 +62,21 @@ http {
     merge_slashes on;
     # --- health
 
-    server_tokens off;
-
-# 444 для явного сміття/невідомих php-скриптів
-    location ~* \.(php|asp|aspx|jsp)$ {
-        return 444;
-    }
-
-    # Блок популярних сміттєвих шляхів
-    location ~* ^/(admin|wp-admin|wp-login|xmlrpc\.php|vendor|env|console) {
-        return 444;
-    }
-
-    # Ліміт частоти запитів (rate limit)
-    limit_req_zone $binary_remote_addr zone=rl:10m rate=10r/s;
-
+#     server_tokens off;
+#
+# # 444 для явного сміття/невідомих php-скриптів
+#     location ~* \.(php|asp|aspx|jsp)$ {
+#         return 444;
+#     }
+#
+#     # Блок популярних сміттєвих шляхів
+#     location ~* ^/(admin|wp-admin|wp-login|xmlrpc\.php|vendor|env|console) {
+#         return 444;
+#     }
+#
+#     # Ліміт частоти запитів (rate limit)
+#     limit_req_zone $binary_remote_addr zone=rl:10m rate=10r/s;
+#
 
     # ...
     location ^~ /dem/{
