dash  dem diff visual

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -17,6 +17,10 @@ http {
   proxy_set_header Connection "";
 
   resolver 127.0.0.11 valid=30s ipv6=off;
+   upstream terracotta_upstream {
+    server terracotta:5000 resolve;   # << ключове
+    keepalive 64;
+  }
   upstream fastapi_upstream {
     server api:8000;
     keepalive 64;
@@ -180,15 +184,16 @@ http {
     location = /flood-dem-diif/    { return 302 /flood_scenarios/; }
     # -----------------------------------------------
     # --- Terracotta тайли з CORS
+    # /tc — через upstream
     location ^~ /tc/ {
-      proxy_pass         http://terracotta:5000/;
+      proxy_pass http://terracotta_upstream/;
       proxy_http_version 1.1;
-      proxy_set_header   Host $host;
-      proxy_set_header   X-Real-IP $remote_addr;
-      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
 
-      # Preflight
+      # CORS/headers як у тебе
       if ($request_method = OPTIONS) {
         add_header Access-Control-Allow-Origin  $cors_allow_origin always;
         add_header Access-Control-Allow-Methods "GET,HEAD,OPTIONS" always;
@@ -197,20 +202,20 @@ http {
         add_header Vary "Origin" always;
         return 204;
       }
-
-      # GET/HEAD
       add_header Access-Control-Allow-Origin  $cors_allow_origin always;
       add_header Access-Control-Allow-Methods "GET,HEAD,OPTIONS" always;
       add_header Access-Control-Allow-Headers "Origin,Content-Type,Accept,Range" always;
       add_header Vary "Origin" always;
     }
-#     location ^~ /tc/static/ {
-#       proxy_pass http://terracotta:5000/static/;
-#       proxy_set_header Host $host;
-#       proxy_http_version 1.1;
-#       proxy_set_header Connection "";
-#       expires 30d;
-#     }
+
+    # якщо треба статика Terracotta:
+    location ^~ /tc/static/ {
+      proxy_pass http://terracotta_upstream/static/;
+      proxy_set_header Host $host;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+      expires 30d;
+    }
 
   }
 }
