--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -216,6 +216,10 @@ http {
       proxy_set_header Connection "";
       expires 30d;
     }
+    location /reports/ {
+    alias /var/www/geoai-reports/;
+    try_files $uri $uri/ =404;
+}
 
   }
 }
