--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -18,9 +18,10 @@ http {
 
   resolver 127.0.0.11 valid=30s ipv6=off;
    upstream terracotta_upstream {
-    server terracotta:5000 resolve;   # << ключове
-    keepalive 64;
-  }
+  zone terracotta 64k;      # ← обов’язково для resolve
+  server terracotta:5000 resolve;
+  keepalive 64;
+}
   upstream fastapi_upstream {
     server api:8000;
     keepalive 64;
