--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -221,6 +221,9 @@ http {
     alias /var/www/geoai-reports/;
     try_files $uri $uri/ =404;
 }
+       location = /cross_section_dashboard {
+        return 302 /reports/cross_section_dashboard.html;
+    }
 
   }
 }
