--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -159,6 +159,25 @@ http {
 #     location = /docs         { return 302 /api/docs; }
 #     location = /openapi.json { return 302 /api/openapi.json; }
 
+    # === ГОЛОВНА SPA з кореня ===
+    location / {
+        alias /var/www/geoai-front/current/;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Статика з кореня (якщо треба окремо кешувати)
+    location /assets/ {
+        alias /var/www/geoai-front/current/assets/;
+        expires 7d;
+        add_header Cache-Control "public, max-age=604800, immutable";
+        access_log off;
+    }
+
+    # Головний index.html без довгого кешу
+    location = /index.html {
+        alias /var/www/geoai-front/current/index.html;
+        add_header Cache-Control "no-cache";
+        }
 
     location /flood_scenarios/ {
              alias /var/www/geoai-front/current/;
