--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,15 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./services/postgis/init:/docker-entrypoint-initdb.d
     ports:
-      - "55432:5432"
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 3s
       retries: 15
     networks: [web]
+    restart: unless-stopped
+
 
 
 
