--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -161,23 +161,23 @@ http {
 
     # === ГОЛОВНА SPA з кореня ===
     location / {
-        alias /var/www/geoai-front/current/;
+        root /var/www/geoai-front/current;     # ← root, НЕ alias
         try_files $uri $uri/ /index.html;
-    }
-
-    # Статика з кореня (якщо треба окремо кешувати)
-    location /assets/ {
-        alias /var/www/geoai-front/current/assets/;
-        expires 7d;
-        add_header Cache-Control "public, max-age=604800, immutable";
-        access_log off;
     }
 
     # Головний index.html без довгого кешу
     location = /index.html {
-        alias /var/www/geoai-front/current/index.html;
+        root /var/www/geoai-front/current;     # ← root, НЕ alias
         add_header Cache-Control "no-cache";
-        }
+    }
+
+    # Статика з кореня SPA
+    location /assets/ {
+        root /var/www/geoai-front/current;     # віддасть /var/www/geoai-front/current/assets/...
+        expires 7d;
+        add_header Cache-Control "public, max-age=604800, immutable";
+        access_log off;
+            }
 
     location /flood_scenarios/ {
              alias /var/www/geoai-front/current/;
