--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -122,7 +122,7 @@ http {
             }
 
      # ваші /assets (якщо потрібне пряме віддавання)
-    location /assets/ {
+    location dem/assets/ {
         alias /app/assets/;                # шлях всередині контейнера/сервера
         try_files $uri @dash;
     }
