--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -122,10 +122,10 @@ http {
             }
 
      # ваші /assets (якщо потрібне пряме віддавання)
-    location dem/assets/ {
-        alias /app/assets/;                # шлях всередині контейнера/сервера
-        try_files $uri @dash;
-    }
+#     location dem/assets/ {
+#         alias /app/assets/;                # шлях всередині контейнера/сервера
+#         try_files $uri @dash;
+#     }
     location @dash {
         proxy_pass http://dash_upstream;
     }
