--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -51,7 +51,7 @@ http {
 
   # --- HTTPS
   server {
-    listen 443 ssl;
+    listen 443 ssl default_server;
     http2 on;
     server_name geohydroai.org www.geohydroai.org;
 
@@ -65,6 +65,8 @@ http {
     proxy_request_buffering off;
     add_header X-Accel-Buffering no always;
     merge_slashes on;
+    index index.html;
+
     # --- health
 
 #     server_tokens off;
@@ -159,25 +161,23 @@ http {
 #     location = /docs         { return 302 /api/docs; }
 #     location = /openapi.json { return 302 /api/openapi.json; }
 
-    # === ГОЛОВНА SPA з кореня ===
-    location / {
-        root /var/www/geoai-front/current;     # ← root, НЕ alias
-        try_files $uri $uri/ /index.html;
-    }
+   # === SPA з кореня
+        location / {
+            root /var/www/geoai-front/current;
+            try_files $uri $uri/ /index.html;
+        }
 
-    # Головний index.html без довгого кешу
-    location = /index.html {
-        root /var/www/geoai-front/current;     # ← root, НЕ alias
-        add_header Cache-Control "no-cache";
-    }
+        location = /index.html {
+            root /var/www/geoai-front/current;
+            add_header Cache-Control "no-cache";
+        }
 
-    # Статика з кореня SPA
-    location /assets/ {
-        root /var/www/geoai-front/current;     # віддасть /var/www/geoai-front/current/assets/...
-        expires 7d;
-        add_header Cache-Control "public, max-age=604800, immutable";
-        access_log off;
-            }
+        location /assets/ {
+            root /var/www/geoai-front/current;
+            expires 7d;
+            add_header Cache-Control "public, max-age=604800, immutable";
+            access_log off;
+        }
 
     location /flood_scenarios/ {
              alias /var/www/geoai-front/current/;
