--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -156,23 +156,20 @@ http {
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
     }
-#     location = /healthz      { proxy_pass http://fastapi_upstream/healthz; }
 
-#     location = /docs         { return 302 /api/docs; }
-#     location = /openapi.json { return 302 /api/openapi.json; }
 
    # === SPA з кореня
-        location / {
+    location / {
             root /var/www/geoai-front/current;
             try_files $uri $uri/ /index.html;
         }
 
-        location = /index.html {
+    location = /index.html {
             root /var/www/geoai-front/current;
             add_header Cache-Control "no-cache";
         }
 
-        location /assets/ {
+    location /assets/ {
             root /var/www/geoai-front/current;
             expires 7d;
             add_header Cache-Control "public, max-age=604800, immutable";
@@ -181,25 +178,25 @@ http {
 
     location /flood_scenarios/ {
              alias /var/www/geoai-front/current/;
-              try_files $uri $uri/ /flood_scenarios/index.html;
+             try_files $uri $uri/ /index.html;
     }
 
     # Блок №2: Обробка статичних файлів (ассетів).
     # Nginx обере цей блок для запитів до /flood_scenarios/assets/*, бо він є більш точним.
-    # Він правильно знаходить файли і встановлює довгий час кешування.
-    location /flood_scenarios/assets/ {
-        alias /var/www/geoai-front/current/assets/;
-        expires 7d;
-        add_header Cache-Control "public, max-age=604800, immutable";
-        access_log off;
-    }
-
-    # Блок №3: Окреме правило для самого index.html.
-    # Забороняє браузеру надовго кешувати головний файл, щоб оновлення підхоплювались одразу.
-    location = /flood_scenarios/index.html {
-        alias /var/www/geoai-front/current/index.html;
-        add_header Cache-Control "no-cache";
-    }
+#     # Він правильно знаходить файли і встановлює довгий час кешування.
+#     location /flood_scenarios/assets/ {
+#         alias /var/www/geoai-front/current/assets/;
+#         expires 7d;
+#         add_header Cache-Control "public, max-age=604800, immutable";
+#         access_log off;
+#     }
+#
+#     # Блок №3: Окреме правило для самого index.html.
+#     # Забороняє браузеру надовго кешувати головний файл, щоб оновлення підхоплювались одразу.
+#     location = /flood_scenarios/index.html {
+#         alias /var/www/geoai-front/current/index.html;
+#         add_header Cache-Control "no-cache";
+#     }
     location = /flood-dem-diif     { return 302 /flood_scenarios/; }
     location = /flood-dem-diif/    { return 302 /flood_scenarios/; }
     # -----------------------------------------------
