--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -180,6 +180,9 @@ http {
              alias /var/www/geoai-front/current/;
              try_files $uri $uri/ /index.html;
     }
+    location = /__whoami {
+       return 200 "I am: $server_name\n";
+  }
 
     # Блок №2: Обробка статичних файлів (ассетів).
     # Nginx обере цей блок для запитів до /flood_scenarios/assets/*, бо він є більш точним.
