--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -159,22 +159,31 @@ http {
 
 
    # === SPA з кореня
+  # SPA з кореня
     location / {
-            root /var/www/geoai-front/current;
-            try_files $uri $uri/ /index.html;
-        }
+      root /var/www/geoai-front/current;
+      try_files $uri $uri/ /index.html;
+    }
 
+    # index.html без довгого кешу
     location = /index.html {
-            root /var/www/geoai-front/current;
-            add_header Cache-Control "no-cache";
-        }
+      root /var/www/geoai-front/current;
+      add_header Cache-Control "no-cache";
+    }
 
+    # статика
     location /assets/ {
-            root /var/www/geoai-front/current;
-            expires 7d;
-            add_header Cache-Control "public, max-age=604800, immutable";
-            access_log off;
-        }
+      root /var/www/geoai-front/current;
+      expires 7d;
+      add_header Cache-Control "public, max-age=604800, immutable";
+      access_log off;
+    }
+
+    # тимчасова діагностика: хто відповідає
+    location = /__whoami {
+      return 200 "I am: $server_name\n";
+    }
+
 
     location /flood_scenarios/ {
              alias /var/www/geoai-front/current/;
